added button to home

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!-- navbar starts -->
     <div class="topnav">
-        <a href="" style="margin-top:2%"><img src="images/favicon.png" height="60" width="60"></a>
+        <a href="#" style="margin-top:-2%"><img src="images/favicon.png" height="64" width="64"></a>
         <a href="#issues">Issues</a>
         <a href="#team">Team</a>
         <a href="#Goal">Our Goal</a>
@@ -35,8 +35,9 @@
     <div class="section home-screen" id="home" data-label="HOME">
         <div class="home-text">
             <div class="home-heading">
-                Environmental Issues
-            </div>
+                Environmental <br> Issues
+            </div><a href="#Goal">
+            <button type="button" class="button" cursor="pointer"> Our Goal</button></a>
             <div class="home-content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Error consequatur molestias dicta alias dolores
                 hic, totam deserunt soluta sint atque quo quas officiis, obcaecati molestiae optio ea voluptas,
