--- a/index.html
+++ b/index.html
@@ -65,27 +65,37 @@
         <div id="open-modal" class="modal-window">
             <div>
                 <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
-                <h1>Issue Name</h1>
-                <div class="text">This is the description of the disaster, consectetur adipiscing elit.<br> Praesent in
-                    ipsum
-                    interdum arcu malesuada
-                    vehicula. Proin <br>accumsan justo non erat volutpat, iaculis consequat<br> arcu ultrices. Nunc
-                    vehicula
-                    ligula laoreet quam<br>
+                <h1>Air Pollution</h1>
+                <div class="text">Air pollution is a serious health issue. Of the 30 most polluted cities in the world, 21 were in India in 2019. As per a
+                study based on 2016 data, at least 140 million people in India breathe air that is 10 times or more over the WHO safe
+                limit and 13 of the world's 20 cities with the highest annual levels of air pollution are in India. 51% of the pollution
+                is caused by industrial pollution, 27 % by vehicles, 17% by crop burning and 5% by other sources. Air pollution
+                contributes to the premature deaths of 2 million Indians every year. Emissions come from vehicles and industry, whereas
+                in rural areas, much of the pollution stems from biomass burning for cooking and keeping warm. In autumn and spring
+                months, large scale crop residue burning in agriculture fields – a cheaper alternative to mechanical tilling – is a
+                major source of smoke, smog and particulate pollution. (we can make graph from the data abovie and sources of air
+                pollution is another graph)
                 </div>
                 <br>
-                <h1>How can we do our part?</h1>
-                <div class="text"> Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Praesent in ipsum
-                    interdum
-                    arcu<br> malesuada vehicula. Proin
-                    accumsan justo non erat volutpat,<br> iaculis consequat arcu ultrices. Nunc vehicula ligula laoreet
-                    quam
-                    ultricies.<br>Lorem
-                    ipsum dolor sit amet, consectetur adipiscing elit. Praesent in ipsum interdum <br>arcu malesuada
-                    vehicula.
-                    Proin accumsan
-                    justo non erat volutpat, iaculis consequat arcu.</div>
-
+                <img src="./images/air.png" alt="" class="graph">
+                <br><br>
+                 <div class="text">Air Pollution- the combination of outdoor and indoor particulate matter, and ozone – is a risk factor for many of the
+                leading causes of death including heart disease, stroke, lower respiratory infections, lung cancer, diabetes and chronic
+                obstructive pulmonary disease (COPD).
+                The Institute for Health Metrics and Evaluation (IHME) in its Global Burden of Disease study provide estimates of the
+                number of deaths attributed to the range of risk factors for disease.1
+                In the visualization we see the number of deaths per year attributed to each risk factor. This chart is shown for the
+                global total, but can be explored for any country or region using the “change country” toggle.
+                Air pollution is one of the leading risk factors for death. In low-income countries, it is often very near the top of
+                the list (or is the leading risk factor).
+</div> <br>
+<h1> What can we do about it?</h1>
+<div class="text"> 
+    • Drive your car less. <br>
+    • Don't burn your garbage.<br>
+    • Plant and care for trees.<br>
+    • Reduce the number of trips you take in your car.<br>
+</div>
             </div>
         </div>
     </div>
@@ -93,24 +103,39 @@
     <div id="open-modal2" class="modal-window">
         <div>
             <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
-            <h1>Issue Name2</h1>
-            <div class="text">This is the description of the disaster, consectetur adipiscing elit.<br> Praesent in
-                ipsum
-                interdum arcu malesuada
-                vehicula. Proin <br>accumsan justo non erat volutpat, iaculis consequat<br> arcu ultrices. Nunc vehicula
-                ligula laoreet quam<br>
+            <h1>Land Pollution</h1>
+            <div class="text">Soil pollution is a form of land pollution in which the soil’s upper layer is harmed. Overuse of chemical fertilizers,
+            soil degradation caused by running water, and other pest control measures contribute to the loss of agricultural land,
+            forest cover, and grazing pastures, among other things.
+            Various Causes of Land Pollution are listed below.<br>
+            <b>• Agricultural Activities</b> – As animal production grows, it becomes decoupled from crop production, causing normal
+            nutrient cycles between plants, soil, and animals to be severely disrupted, resulting in the widespread use of synthetic
+            herbicides, insecticides, bactericides, and fertilizers, all of which contribute to pollution.<br>
+            <b>• Mining Activities</b> – Mining has the potential to pollute the air and water supply, damage biodiversity and ecosystems,
+            and permanently alter natural landscapes. Mining harms the ecosystem by destroying habitats, causing soil erosion, and
+            polluting surface water, groundwater, and soil.<br>
+            <b>• Urbanization</b> – Intensive urbanization will exacerbate poverty by preventing local municipalities from providing
+            services to all residents. Increased air pollution from concentrated energy usage has a direct effect on human health.
+            Lead levels in urban air are elevated as a result of automobile emissions.<br>
+            <b>• Nuclear Waste</b> – The soil is also contaminated by radioactive waste from nuclear research stations and nuclear power
+            plants, as well as radioactive fallout from nuclear explosions. Since radioactive materials have a long half-life, they
+            can survive in the soil for long periods of time.
+
             </div>
             <br>
-            <h1>How can we do our part?</h1>
-            <div class="text"> Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Praesent in ipsum interdum
-                arcu<br> malesuada vehicula. Proin
-                accumsan justo non erat volutpat,<br> iaculis consequat arcu ultrices. Nunc vehicula ligula laoreet quam
-                ultricies.<br>Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Praesent in ipsum interdum <br>arcu malesuada
-                vehicula.
-                Proin accumsan
-                justo non erat volutpat, iaculis consequat arcu.</div>
-
+            <img src="./images/land.png" alt="" class="graph"> <br> <br>
+            <div class="text">Global waste disposal: Although most of the waste we produce is relatively harmless and easy to dispose of, some is
+            dangerous or toxic and extremely difficult to get rid of without automatically contaminating land. As this chart shows,
+            69% of global waste (gray slices) involves direct land contamination. A further 11% (black slice) results in potential
+            indirect contamination—when incinerator ash returns to the land. Only 18% of waste disposal, involving composting or
+            recycling, is "green" (green slices).</div><br>
+<h1> What can we do about it?</h1>
+<div class="text">
+    • Reforestation avoids river and lake silting by reducing surface erosion and preserving the fertile topsoil. It
+    prevents the soil surface from sealing and cuts down on the amount of rainwater that runs off. When compared to
+    petroleum-based plastics, biodegradable plastics produce significantly less waste. As biodegradable plastics degrade,
+    they decompose into nontoxic, harmless components. Just 32% of the greenhouse gases released by petroleum-based plastics
+    are produced by them.</div>
         </div>
     </div>
     </div>
@@ -118,24 +143,41 @@
     <div id="open-modal3" class="modal-window">
         <div>
             <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
-            <h1>Issue Name3</h1>
-            <div class="text">This is the description of the disaster, consectetur adipiscing elit.<br> Praesent in
-                ipsum
-                interdum arcu malesuada
-                vehicula. Proin <br>accumsan justo non erat volutpat, iaculis consequat<br> arcu ultrices. Nunc vehicula
-                ligula laoreet quam<br>
-            </div>
-            <br>
-            <h1>How can we do our part?</h1>
-            <div class="text"> Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit. Praesent in ipsum interdum
-                arcu<br> malesuada vehicula. Proin
-                accumsan justo non erat volutpat,<br> iaculis consequat arcu ultrices. Nunc vehicula ligula laoreet quam
-                ultricies.<br>Lorem
-                ipsum dolor sit amet, consectetur adipiscing elit. Praesent in ipsum interdum <br>arcu malesuada
-                vehicula.
-                Proin accumsan
-                justo non erat volutpat, iaculis consequat arcu.</div>
+            <h1>Water Pollution</h1>
+            <div class="text">Water pollution is said to occur when toxic pollutants and particulate matter are introduced into water bodies such as
+            lakes, rivers and seas. These contaminants are generally introduced by human activities like improper sewage treatment
+            and oil spills. However, even natural processes such as eutrophication can cause water pollution.
+            Other significant causes of water pollution include:<br>
+            • Dumping solid wastes in water bodies<br>
+            • Disposing untreated industrial sewage into water bodies<br>
+            • Human and animal wastes<br>
+            • Agricultural runoff containing pesticides and fertilisers<br>
 
+            </div>
+            <img src="./images/water.jpg" alt="" class="graph" style="margin-left:15%"> <br> <br>
+            <br>
+            <div class="text">The effects of water pollution are very pronounced in our environment. Furthermore, toxic chemicals can bioaccumulate in
+            living beings, and these chemicals can travel their way up the food chain, ultimately reaching humans.
+            Among the other types of pollution, water pollution has severe consequences on humans. For instance, in 1932, a grave
+            case of water pollution incapacitated the inhabitants of an entire city in Japan with neurological diseases and mental
+            illness for many decades. However, the immediate cause was not apparent but was eventually attributed to acute mercury
+            poisoning. Methylmercury was dumped into the surrounding bay and had ultimately bioaccumulated inside the fish. The
+            local population then consumed these fish, and this resulted in the manifestation of ill effects and neurological
+            diseases.<br>
+            Other consequences of water pollution include:<br>
+            • Disruption of the ecosystem<br>
+            • Threats to marine life<br>
+            • Increased risk of water-borne diseases<br>
+            • Increases toxic chemicals (such as mercury) in water bodies<br>
+            • Eutrophication<br></div>
+<br> <br>
+
+            <h1>What can we do about it?</h1>
+            <div class="text">
+            • Dispose of Toxic Chemicals Properly <br>
+            • Reduce the amount of water you use<br>
+            • Try to Avoid Plastic Containers<br>
+            </div>
         </div>
     </div>
     </div>
