--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
     <!-- issues section ends -->
 
     <div class="section" id="team" data-label="TEAM">Team</div>
-    <div class="section" id="Goal" data-label="Goal">Our Goal</div>
+    <div class="section" id="Goal" data-label="Goal">
+        <h1 class="title">
+        Our Goal
+        </h1>
+    </div>
 
 
 
