--- a/index.html
+++ b/index.html
@@ -237,8 +237,26 @@
     <div class="section" id="team" data-label="TEAM">Team</div>
     <div class="section" id="Goal" data-label="Goal">
         <h1 class="title">
-            Our Goal
-        </h1>
+<h1 class="heading">Our Goal</h1>
+<p class="content-line">Environmental Concerns are no joke.
+    <br>If humanity is to thrive for the foreseeable future, it must be our topmost
+    priority to solve these environmental issues.
+    And this must all start with raising awareness, telling people about the
+    dangers of these issues.
+
+<br />
+    <b>Our Goal</b> is simple : do whatever we can to spread the word.
+    <br />
+    <br />
+    Raise Awareness.
+    <br />
+    Spread Information.
+    <br />
+    Try to make a change at our level.<br>
+
+    We don't have million dollar budgets. We don't have the resources. But we
+    will do what we can to punch Environmental Issues in the face.
+</p>        </h1>
     </div>
 
 </body>
