--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div class="section" id="team" data-label="TEAM">Team</div>
     <div class="section" id="Goal" data-label="Goal">
         <h1 class="title">
-<h1 class="heading">Our Goal</h1>
+Our Goal</h1>
 <p class="content-line">Environmental Concerns are no joke.
     <br>If humanity is to thrive for the foreseeable future, it must be our topmost
     priority to solve these environmental issues.
