feat: Add team page + cleaned code

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <!-- issues section starts -->
     <div class="section" id="issues" data-label="ISSUES">
-        <div class="major">Major environmental issues<br>
-            In today’s age</div>
+        <div class="issues-heading">Major environmental issues<br>In today’s age
+        </div>
         <!-- Buttons -->
         <div class="container">
             <a class="btn" href="#open-modal">Air Pollution</a>
@@ -74,7 +74,8 @@
             <div>
                 <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
                 <h1>Air Pollution</h1>
-                <div class="text">Air pollution is a serious health issue. Of the 30 most polluted cities in the world,
+                <div class="modal-text">Air pollution is a serious health issue. Of the 30 most polluted cities in the
+                    world,
                     21 were in India in 2019. As per a
                     study based on 2016 data, at least 140 million people in India breathe air that is 10 times or more
                     over the WHO safe
@@ -95,7 +96,8 @@
                 <br>
                 <img src="./images/air.png" alt="" class="graph">
                 <br><br>
-                <div class="text">Air Pollution- the combination of outdoor and indoor particulate matter, and ozone –
+                <div class="modal-text">Air Pollution- the combination of outdoor and indoor particulate matter, and
+                    ozone –
                     is a risk factor for many of the
                     leading causes of death including heart disease, stroke, lower respiratory infections, lung cancer,
                     diabetes and chronic
@@ -111,7 +113,7 @@
                     the list (or is the leading risk factor).
                 </div> <br>
                 <h1> What can we do about it?</h1>
-                <div class="text">
+                <div class="modal-text">
                     • Drive your car less. <br>
                     • Don't burn your garbage.<br>
                     • Plant and care for trees.<br>
@@ -126,7 +128,8 @@
         <div>
             <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
             <h1>Land Pollution</h1>
-            <div class="text">Soil pollution is a form of land pollution in which the soil’s upper layer is harmed.
+            <div class="modal-text">Soil pollution is a form of land pollution in which the soil’s upper layer is
+                harmed.
                 Overuse of chemical fertilizers,
                 soil degradation caused by running water, and other pest control measures contribute to the loss of
                 agricultural land,
@@ -156,7 +159,8 @@
             </div>
             <br>
             <img src="./images/land.png" alt="" class="graph"> <br> <br>
-            <div class="text">Global waste disposal: Although most of the waste we produce is relatively harmless and
+            <div class="modal-text">Global waste disposal: Although most of the waste we produce is relatively harmless
+                and
                 easy to dispose of, some is
                 dangerous or toxic and extremely difficult to get rid of without automatically contaminating land. As
                 this chart shows,
@@ -166,7 +170,7 @@
                 composting or
                 recycling, is "green" (green slices).</div><br>
             <h1> What can we do about it?</h1>
-            <div class="text">
+            <div class="modal-text">
                 • Reforestation avoids river and lake silting by reducing surface erosion and preserving the fertile
                 topsoil. It
                 prevents the soil surface from sealing and cuts down on the amount of rainwater that runs off. When
@@ -184,7 +188,7 @@
         <div>
             <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
             <h1>Water Pollution</h1>
-            <div class="text">Water pollution is said to occur when toxic pollutants and particulate matter are
+            <div class="modal-text">Water pollution is said to occur when toxic pollutants and particulate matter are
                 introduced into water bodies such as
                 lakes, rivers and seas. These contaminants are generally introduced by human activities like improper
                 sewage treatment
@@ -198,7 +202,8 @@
             </div>
             <img src="./images/water.jpg" alt="" class="graph" style="margin-left:15%"> <br> <br>
             <br>
-            <div class="text">The effects of water pollution are very pronounced in our environment. Furthermore, toxic
+            <div class="modal-text">The effects of water pollution are very pronounced in our environment. Furthermore,
+                toxic
                 chemicals can bioaccumulate in
                 living beings, and these chemicals can travel their way up the food chain, ultimately reaching humans.
                 Among the other types of pollution, water pollution has severe consequences on humans. For instance, in
@@ -221,7 +226,7 @@
             <br> <br>
 
             <h1>What can we do about it?</h1>
-            <div class="text">
+            <div class="modal-text">
                 • Dispose of Toxic Chemicals Properly <br>
                 • Reduce the amount of water you use<br>
                 • Try to Avoid Plastic Containers<br>
@@ -234,29 +239,62 @@
     </div>
     <!-- issues section ends -->
 
-    <div class="section" id="team" data-label="TEAM">Team</div>
-    <div class="section" id="Goal" data-label="Goal">
-        <h1 class="title">
-Our Goal</h1>
-<p class="content-line">Environmental Concerns are no joke.
-    <br>If humanity is to thrive for the foreseeable future, it must be our topmost
-    priority to solve these environmental issues.
-    And this must all start with raising awareness, telling people about the
-    dangers of these issues.
+    <div class="section team-screen" id="team" data-label="TEAM">
 
-<br />
-    <b>Our Goal</b> is simple : do whatever we can to spread the word.
-    <br />
-    <br />
-    Raise Awareness.
-    <br />
-    Spread Information.
-    <br />
-    Try to make a change at our level.<br>
+        <div class="team-heading">
+            Our Team
+        </div>
 
-    We don't have million dollar budgets. We don't have the resources. But we
-    will do what we can to punch Environmental Issues in the face.
-</p>        </h1>
+        <div class="team-pics">
+            <div class="team-member">
+                <img src="./images/IMG_7585.jpg" alt="Adarsh Sharma" class="member-pic">
+                <div class="names">Adarsh Sharma</div>
+            </div>
+
+            <div class="team-member">
+                <img src="./images/IMG_7585.jpg" alt="Abhik" class="member-pic">
+                <div class="names">Abhik</div>
+            </div>
+
+            <div class="team-member">
+                <img src="./images/IMG_7585.jpg" alt="Chirayu" class="member-pic">
+                <div class="names">Chirayu</div>
+            </div>
+
+            <div class="team-member">
+                <img src="./images/IMG_7585.jpg" alt="Lakshya" class="member-pic">
+                <div class="names">Lakshya</div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <div class="section goal-screen" id="Goal" data-label="GOAL">
+        <div class="goal-title">
+            Our Goal
+        </div>
+        <p class="content-line">Environmental Concerns are no joke.
+            <br>If humanity is to thrive for the foreseeable future, it must be our topmost
+            priority to solve these environmental issues.
+            And this must all start with raising awareness, telling people about the
+            dangers of these issues.
+
+            <br />
+            <b>Our Goal</b> is simple : do whatever we can to spread the word.
+            <br />
+            <br />
+            Raise Awareness.
+            <br />
+            Spread Information.
+            <br />
+            Try to make a change at our level.<br>
+
+            We don't have million dollar budgets. We don't have the resources. But we
+            will do what we can to punch Environmental Issues in the face.
+        </p>
+        </h1>
     </div>
 
 </body>
