made bar graphs responsive

--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
                 • Dumping solid wastes in water bodies<br>
                 • Disposing untreated industrial sewage into water bodies<br>
                 • Human and animal wastes<br>
-                • Agricultural runoff containing pesticides and fertilisers<br>
-
+                • Agricultural runoff containing pesticides and fertilisers
             </div>
             <!-- <img src="./images/water.jpg" alt="" class="graph" style="margin-left:15%">  -->
             <!-- Column chart to represent water quality of different nations. -->
@@ -222,8 +221,7 @@
                 <div id="columnchart_values"></div>
             </div>
 
-            <br>
-            <br>
+
             <div class="modal-text">The effects of water pollution are very pronounced in our environment. Furthermore,
                 toxic
                 chemicals can bioaccumulate in
