--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@
 
     <div class="section team-screen" id="team" data-label="TEAM">
 
-        <div class="team-heading">
+
+
+        <div class="team-pics">        <div class="team-heading">
             Our Team
         </div>
-
-        <div class="team-pics">
             <div class="team-member">
                 <img src="./images/team/IMG_7585.jpg" alt="Adarsh Sharma" class="member-pic">
                 <a href="https://github.com/adarsharma-in" class="names" target="_blank">Adarsh Sharma</a>
