--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         </div>
         <!-- Buttons end -->
 
+        <!-- modal 1 (Air Pollution) starts -->
         <div id="open-modal" class="modal-window">
             <div>
                 <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
@@ -115,7 +116,9 @@
                 <br>
 
                 <!-- 3D piechart to represent contributors of air pollution -->
-                <div id="piechart_3d"></div>
+                <div class="graph-container">
+                    <div id="piechart_3d" class="graph"></div>
+                </div>
 
                 <br>
                 <div class="modal-text">
@@ -129,7 +132,7 @@
                     country” toggle. Air pollution is one of the leading risk factors for death. In low-income
                     countries, it is often very near the top of the list (or is the leading risk factor).
                 </div> <br>
-                <h1> What can we do about it?</h1>
+                <h1> Preventions</h1>
                 <div>
                     <ul>
                         <li class="modal-text">Drive your car less.</li>
@@ -142,45 +145,37 @@
         </div>
     </div>
 
-    <!-- modal 2 starts -->
+    <!-- modal 2 starts (Land Pollution) -->
     <div id="open-modal2" class="modal-window">
         <div>
             <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
             <h1>Land Pollution</h1>
             <div class="modal-text">Soil pollution is a form of land pollution in which the soil’s upper layer is
                 harmed.
-                Overuse of chemical fertilizers,
-                soil degradation caused by running water, and other pest control measures contribute to the loss of
-                agricultural land,
-                forest cover, and grazing pastures, among other things.
-                Various Causes of Land Pollution are listed below.<br>
+                Overuse of chemical fertilizers, soil degradation caused by running water, and other pest control
+                measures contribute to the loss of agricultural land, forest cover, and grazing pastures, among other
+                things.Various Causes of Land Pollution are listed below.<br>
                 <b>• Agricultural Activities</b> – As animal production grows, it becomes decoupled from crop
-                production, causing normal
-                nutrient cycles between plants, soil, and animals to be severely disrupted, resulting in the widespread
-                use of synthetic
-                herbicides, insecticides, bactericides, and fertilizers, all of which contribute to pollution.<br>
+                production, causing normal nutrient cycles between plants, soil, and animals to be severely disrupted,
+                resulting in the widespread use of synthetic herbicides, insecticides, bactericides, and fertilizers,
+                all of which contribute to pollution.<br>
                 <b>• Mining Activities</b> – Mining has the potential to pollute the air and water supply, damage
-                biodiversity and ecosystems,
-                and permanently alter natural landscapes. Mining harms the ecosystem by destroying habitats, causing
-                soil erosion, and
-                polluting surface water, groundwater, and soil.<br>
+                biodiversity and ecosystems, and permanently alter natural landscapes. Mining harms the ecosystem by
+                destroying habitats, causing soil erosion, and polluting surface water, groundwater, and soil.<br>
                 <b>• Urbanization</b> – Intensive urbanization will exacerbate poverty by preventing local
-                municipalities from providing
-                services to all residents. Increased air pollution from concentrated energy usage has a direct effect on
-                human health.
-                Lead levels in urban air are elevated as a result of automobile emissions.<br>
+                municipalities from providing services to all residents. Increased air pollution from concentrated
+                energy usage has a direct effect on human health. Lead levels in urban air are elevated as a result of
+                automobile emissions.<br>
                 <b>• Nuclear Waste</b> – The soil is also contaminated by radioactive waste from nuclear research
-                stations and nuclear power
-                plants, as well as radioactive fallout from nuclear explosions. Since radioactive materials have a long
-                half-life, they
-                can survive in the soil for long periods of time.
+                stations and nuclear power plants, as well as radioactive fallout from nuclear explosions. Since
+                radioactive materials have a long half-life, they can survive in the soil for long periods of time.
 
             </div>
             <br>
-            <div class="experiment">
-                <div id="donutchart" class="experiment-2"></div>
+            <!-- donutchart to represent various waste disposals-->
+            <div class="graph-container">
+                <div id="donutchart" class="graph"></div>
             </div>
-
 
             <br>
             <div class="modal-text">Global waste disposal: Although most of the waste we produce is relatively harmless
@@ -194,6 +189,7 @@
                 composting or
                 recycling, is "green" (green slices).</div><br>
             <h1> What can we do about it?</h1>
+
             <div class="modal-text">
                 • Reforestation avoids river and lake silting by reducing surface erosion and preserving the fertile
                 topsoil. It
@@ -208,6 +204,8 @@
     </div>
     </div>
     <!--modal 2 ends-->
+
+    <!--modal 3 starts (Water Pollution)-->
     <div id="open-modal3" class="modal-window">
         <div>
             <a href="#issues" title="Close" class="modal-close"><img src="images/close.svg"></a>
@@ -215,18 +213,20 @@
             <div class="modal-text">Water pollution is said to occur when toxic pollutants and particulate matter are
                 introduced into water bodies such as
                 lakes, rivers and seas. These contaminants are generally introduced by human activities like improper
-                sewage treatment
-                and oil spills. However, even natural processes such as eutrophication can cause water pollution.
-                Other significant causes of water pollution include:<br>
-                • Dumping solid wastes in water bodies<br>
-                • Disposing untreated industrial sewage into water bodies<br>
-                • Human and animal wastes<br>
-                • Agricultural runoff containing pesticides and fertilisers
+                sewage treatment and oil spills. However, even natural processes such as eutrophication can cause water
+                pollution.
+                Other significant causes of water pollution include:
+                <ul>
+                    <li class="modal-text">Dumping solid wastes in water bodies</li>
+                    <li class="modal-text">Disposing untreated industrial sewage into water bodies </li>
+                    <li class="modal-text">Human and animal wastes </li>
+                    <li class="modal-text">Agricultural runoff containing pesticides and fertilisers</li>
+                </ul>
             </div>
 
             <!-- Column chart to represent water quality of different nations. -->
-            <div>
-                <div id="columnchart_values"></div>
+            <div class="graph-container">
+                <div id="columnchart_values" class="graph"></div>
             </div>
 
 
@@ -245,28 +245,27 @@
                 local population then consumed these fish, and this resulted in the manifestation of ill effects and
                 neurological
                 diseases.<br>
-                Other consequences of water pollution include:<br>
-                • Disruption of the ecosystem<br>
-                • Threats to marine life<br>
-                • Increased risk of water-borne diseases<br>
-                • Increases toxic chemicals (such as mercury) in water bodies<br>
-                • Eutrophication<br></div>
+                Other consequences of water pollution include:
+                <ul>
+                    <li class="modal-text">Disruption of the ecosystem</li>
+                    <li class="modal-text">Threats to marine life</li>
+                    <li class="modal-text">Increased risk of water-borne diseases</li>
+                    <li class="modal-text">Increases toxic chemicals (such as mercury) in water bodies</li>
+                </ul>
+            </div>
             <br> <br>
 
             <h1>What can we do about it?</h1>
-            <div class="modal-text">
-                • Dispose of Toxic Chemicals Properly <br>
-                • Reduce the amount of water you use<br>
-                • Try to Avoid Plastic Containers<br>
-            </div>
+            <ul>
+                <li class="modal-text">Dispose of Toxic Chemicals Properly</li>
+                <li class="modal-text">Reduce the amount of water you use</li>
+                <li class="modal-text">Try to Avoid Plastic Containers</li>
+            </ul>
         </div>
-    </div>
-    </div>
-    <!-- partial -->
-
     </div>
     <!-- issues section ends -->
 
+    <!-- Team Section starts -->
     <div class="section team-screen" id="team" data-label="TEAM">
 
         <div class="team-heading">
