--- a/index.html
+++ b/index.html
@@ -270,17 +270,17 @@
             </div>
 
             <div class="team-member">
-                <img src="./images/IMG_7585.jpg" alt="Abhik Choudhary" class="member-pic">
+                <img src="./images/Team/Abhik.jpg" alt="Abhik Choudhary" class="member-pic">
                 <a href="http://capro.tk" class="names" target="_blank">Abhik Choudhary</a>
             </div>
 
             <div class="team-member">
-                <img src="./images/IMG_7585.jpg" alt="Chirayu" class="member-pic">
+                <img src="./images/Team/chirayu.jpeg" alt="Chirayu" class="member-pic">
                 <div class="names">Chirayu</div>
             </div>
 
             <div class="team-member">
-                <img src="./images/IMG_7585.jpg" alt="Lakshya" class="member-pic">
+                <img src="./images/Team/lakshya.jpeg" alt="Lakshya" class="member-pic">
                 <div class="names">Lakshya</div>
             </div>
         </div>
