feat: Add references

--- a/index.html
+++ b/index.html
@@ -140,6 +140,29 @@
                         <li class="modal-text">Reduce the number of trips you take in your car</li>
                     </ul>
                 </div>
+                <!-- Project References  -->
+                <h1> References</h1>
+                <div>
+                    <ul>
+                        <a href="https://www.researchgate.net/">
+                            <li class="modal-text"> Research Gate
+                            </li>
+                        </a>
+                        <a href="https://www.britannica.com/science/">
+                            <li class="modal-text"> Britannica
+                            </li>
+                        </a>
+                        <a href="https://byjus.com/biology/environmental-issues-solutions/">
+                            <li class="modal-text"> Byjus
+                            </li>
+                        </a>
+                        <a href="https://pubchem.ncbi.nlm.nih.gov/">
+                            <li class="modal-text"> PubChem
+                            </li>
+                        </a>
+
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -207,6 +230,29 @@
                 petroleum-based plastics
                 are produced by them.
             </div>
+            <!-- Project References -->
+            <h1> References</h1>
+            <div>
+                <ul>
+                    <a href="https://www.researchgate.net/">
+                        <li class="modal-text"> Research Gate
+                        </li>
+                    </a>
+                    <a href="https://www.britannica.com/science/">
+                        <li class="modal-text"> Britannica
+                        </li>
+                    </a>
+                    <a href="https://byjus.com/biology/environmental-issues-solutions/">
+                        <li class="modal-text"> Byjus
+                        </li>
+                    </a>
+                    <a href="https://pubchem.ncbi.nlm.nih.gov/">
+                        <li class="modal-text"> PubChem
+                        </li>
+                    </a>
+
+                </ul>
+            </div>
         </div>
     </div>
     <!--modal 2 ends-->
@@ -267,6 +313,30 @@
                     <li class="modal-text">Reduce the amount of water you use</li>
                     <li class="modal-text">Try to Avoid Plastic Containers</li>
                 </ul>
+
+                <!-- Project References -->
+                <h1> References</h1>
+                <div>
+                    <ul>
+                        <a href="https://www.researchgate.net/">
+                            <li class="modal-text"> Research Gate
+                            </li>
+                        </a>
+                        <a href="https://www.britannica.com/science/water-pollution">
+                            <li class="modal-text"> Britannica
+                            </li>
+                        </a>
+                        <a href="https://byjus.com/">
+                            <li class="modal-text"> Byjus
+                            </li>
+                        </a>
+                        <a href="https://pubchem.ncbi.nlm.nih.gov/">
+                            <li class="modal-text"> PubChem
+                            </li>
+                        </a>
+
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
